# short_link

./: .gitignore  README.md  pyproject.toml
docs/: Functional requirements.md  NFR.md
src/app/: config.py  routes.py  service.py
src/app/api/v1/create/: handler.py  schemas.py
src/app/data_access_layer/SQL/: base.py  data_access_object.py
src/app/main/: main.py
src/migration/: env.py
src/migration/versions/: 0_initial.py
