[tool.poetry]
name = "short-link"
version = "0.1.0"
description = ""
authors = ["wechnik <vvechnik@gmail.com>"]
readme = "README.md"
packages = [{include = "short_link"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pytest = "^7.2.1"
validators = "^0.20.0"
asyncpg = "^0.27.0"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
